Added Plays and Albums routes, repository, service. Removed unnecessary entities. Corrected entity property names.
